# web_scraping-crawling_samples

./: README.md  docker-compose.yaml
fake_bookstore_crawler/fake_bookstore_crawler/: items.py  middlewares.py  pipelines.py
fake_bookstore_crawler/fake_bookstore_crawler/spiders/: bookstore_crawler.py
fake_bookstore_scrapy/: docker-compose.yaml  pyproject.toml
fake_bookstore_scrapy/fake_bookstore_crawler/: scrapy.cfg
fake_bookstore_scrapy/fake_bookstore_crawler/fake_bookstore_crawler/: pipelines.py  settings.py
